Add missing references to Web APPs and add About Me page

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 				<a href="index.html">Home</a>
 			</li>
 			<li>
-				<a>Web APPs</a>
+				<a href="apps.html">Web APPs</a>
 				<ul>
 					<li><a href="derivative.html">Derivative calculator</a></li>
 					<li><a href="snake.html">Snake</a></li>
@@ -29,7 +29,7 @@
 					<li><a href="https://github.com/IceMage144/Algorithms">Algorithms</a></li>
 					<li><a href="https://github.com/IceMage144/ScrapyCrawlers">Crawlers</a></li>
 					<li><a href="https://uspgamedev.org/">Gamedev</a></li>
-			    </ul>
+			  </ul>
 			</li>
 			<li>
 				<a href="events.html">Events</a>
@@ -42,8 +42,24 @@
 	<div class="paper">
 	  <div class="content">
 			<center>
-				<p>&nbsp;</p>
-				<h2>This page is under construction... Come back later, perhaps?</h2>
+				<h2>About me</h2>
+				<div class="row">
+					<div class="column">
+						<img id="perfil" src="assets/perfil.jpg">
+					</div>
+					<div class="column">
+						<p>
+							Born and raised in the small city of Porto Ferreira. Searching at the internet
+							for an easy way to make a game, met Game Maker, and started to program a simple
+							RPG, only with youtube videos for reference. Abandoned the project many times
+							because of unknown bugs in the code. After spending lots of hours thinking how
+							to solve bugs and how to implement features, decided to apply for computer
+							science to learn more about that fascinating area. Came to São Paulo to
+							make the college at USP, and got even more delighted with the area, mainly
+							with subjects related to artificial intelligence and machine learning.
+						</p>
+					</div>
+				</div>
 				<p>&nbsp;</p>
 			</center>
 		</div>
@@ -60,7 +76,7 @@
 						</ul>
 					</td>
 				</tr>
-			</table>
+			</tbody>
 		</table>
 	</footer>
 </body>
