--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ http://materializecss.com/buttons.html
 		<div id="image"></div>
 		<ul class="navbar">
 			<li class="active">
-				<a>Home</a>
+				<a href="index.html">Home</a>
 			</li>
 			<li>
 				<a href="apps.html">Web APPs</a>
@@ -27,7 +27,7 @@ http://materializecss.com/buttons.html
 					<li><a href="missile_command.html">Missile command</a></li>
 					<li><a href="maze.html">3D Maze</a></li>
 					<li><a href="tower_deffense.html">Monster invasion</a></li>
-			    </ul>
+			  </ul>
 			</li>
 			<li>
 				<a href="projects.html">Projects</a>
@@ -67,7 +67,7 @@ http://materializecss.com/buttons.html
 						</ul>
 					</td>
 				</tr>
-			</table>
+			</tbody>
 		</table>
 	</footer>
 </body>
