--- a/maze.html
+++ b/maze.html
@@ -13,7 +13,7 @@
 				<a href="index.html">Home</a>
 			</li>
 			<li class="active">
-				<a>Web APPs</a>
+				<a href="apps.html">Web APPs</a>
 				<ul>
 					<li><a href="derivative.html">Derivative calculator</a></li>
           <li><a href="snake.html">Snake</a></li>
@@ -84,7 +84,7 @@
 						</ul>
 					</td>
 				</tr>
-			</table>
+			</tbody>
 		</table>
 	</footer>
 </body>
