--- a/apps.html
+++ b/apps.html
@@ -21,6 +21,7 @@
 					<li><a href="missile_command.html">Missile command</a></li>
 					<li><a href="maze.html">3D Maze</a></li>
 					<li><a href="tower_deffense.html">Monster invasion</a></li>
+					<li><a href="julia.html">Julia set</a></li>
 			  </ul>
 			</li>
 			<li>
@@ -53,6 +54,7 @@
 				<li><a href="missile_command.html">Missile Command</a>: A remake of the classic game "Missile Command"</li>
 				<li><a href="maze.html">3D Maze</a>: A game were the objective is to take a ball to the end of the maze</li>
 				<li><a href="tower_deffense.html">Monster Invasion</a>: A tower deffense game</li>
+				<li><a href="julia.html">Julia set</a>: An app for visualizing Julia sets, proposed by <a href="https://www.youtube.com/watch?v=fAsaSkmbF5s">The Coding Train</a></li>
 			</ul>
 			<p>&nbsp;</p>
 	  </div>
