--- a/snake.html
+++ b/snake.html
@@ -21,6 +21,7 @@
 					<li><a href="missile_command.html">Missile command</a></li>
 					<li><a href="maze.html">3D Maze</a></li>
 					<li><a href="tower_deffense.html">Monster invasion</a></li>
+					<li><a href="julia.html">Julia set</a></li>
 			  </ul>
 			</li>
 			<li>
