Add libraries and change some things at julia.js and at some html files

--- a/derivative.html
+++ b/derivative.html
@@ -99,7 +99,7 @@
 										<li>You can use the constants e, pi and gr (golden ratio)</li>
 										<li>Power was implemented as a^b and square root was implemeted as sqrt(a)</li>
 										<li>log and ln were implemented too</li>
-										<li>Every trigonometric function were implemented (inverses, inverse functions and hiperbolic)</li>
+										<li>Every trigonometric function were implemented (reciprocals, inverses and hiperbolics too)</li>
 										<li>sum(a, b, x_i) = summation of x_i's, with i going from a to b (a and b can be almost anything) (Obs.: don't try to derivate it in x_i!)</li>
 										<li>Factorial is not implemented</li>
 										<li>You may have to do some algebraic manipulations to simplify the result :)</li>
