--- a/julia.html
+++ b/julia.html
@@ -88,7 +88,7 @@
 								<td>
 									<ul>
 										<li>Enter an imaginary number at the fields to see the corresponding Julia set on the left canvas</li>
-										<li>You can hold the Z key and point with the mouse to the Mandelbrot set (on the right canvas), so you can see the Julia set of that point on the left canvas</li>
+										<li>You can hold the Z key and point with the mouse to the Mandelbrot set, so you can see the Julia set of that point on the left canvas</li>
 										<li>You can increase or decrease the resolution using the "+" and "-" buttons</li>
 									</ul>
 								</td>
