--- a/maze.html
+++ b/maze.html
@@ -48,7 +48,7 @@
 				<input type="button" value="-" onclick="resize(-1)">-->
 				<div id="gamediv">
 		      <!--<canvas id="game"></canvas>-->
-					<script type="text/javascript" src="three.js"></script>
+					<script type="text/javascript" src="libraries/three/three.js"></script>
 					<script type="text/javascript" src="game_engine.js"></script>
 		      <script type="text/javascript" src="maze_script.js"></script>
 				</div>
