Change perfil foto, add ld41 to events and add PSB to projects

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 						<p>
 							Born and raised in the small city of Porto Ferreira. Searching at the internet
 							for an easy way to make a game, met Game Maker, and started to program a simple
-							RPG, only with youtube videos for reference. Abandoned the project many times
+							RPG, only with youtube videos as reference. Abandoned the project many times
 							because of unknown bugs in the code. After spending lots of hours thinking how
 							to solve bugs and how to implement features, decided to apply for computer
 							science to learn more about that fascinating area. Came to São Paulo to
