--- a/projects.html
+++ b/projects.html
@@ -57,8 +57,11 @@
 						<li>Random fractals: Generates Barnsley's fern and Sierpinski's triangle with moving dots</li>
 						<li>Conjecture: A Collatz conjecture analizer and "solver"</li>
 						<li>Markov: A random text generator using Markov chain</li>
-						<li>Neural :): My attempt to make a neural network before knowing what it is</li>
+						<li>PseudoNeural: My attempt to make a neural network before knowing what it is</li>
 						<li>Times table: A times table drawer and animator</li>
+						<li>Evo: An algorithm based on neural networks and genetic algorithm that tries to find the best shooting ball</li>
+						<li>MandelbrotSet: A Mandelbrot set visualizer</li>
+						<li>RandomWalk: A program that visualizes the diffusion-limited aggregation process</li>
 					</ul>
 				</li>
 				<li>
@@ -78,6 +81,8 @@
 						<li><a href="https://github.com/IceMage144/SpaceInvaders">Space invaders</a>: A reproduction of the famous game Space Invaders</li>
 						<li><a href="https://github.com/uspgamedev/Deviant">Deviant</a>: A thriller adventure game set on a dystopic future</li>
 						<li><a href="https://github.com/uspgamedev/ugdk">UGDK (USP Game Development Kit)</a>: A C++ library for making games</li>
+						<li><a href="https://github.com/uspgamedev/Pirate-ship-battles">Pirate ship battles</a>: An online multiplayer game, were you control a pirate
+							ship and try to destroy the other players</li>
 						<li>And some other ones you can see at <a href="events.html">Events</a>...
 					</ul>
 				</li>
