Fix engine bug at missile command, add more Events and remove top image

--- a/about.html
+++ b/about.html
@@ -7,7 +7,6 @@
 </head>
 <body>
 	<header>
-		<div id="image"></div>
 		<ul class="navbar">
 			<li>
 				<a href="index.html">Home</a>
@@ -56,8 +55,8 @@
 							because of unknown bugs in the code. After spending lots of hours thinking how
 							to solve bugs and how to implement features, decided to apply for computer
 							science to learn more about that fascinating area. Came to São Paulo to
-							make the college at USP, and got even more delighted with the area, mainly
-							with subjects related to artificial intelligence and machine learning.
+							study at USP, and got even more delighted with the area, mainly
+							with subjects related to artificial intelligence, machine learning and games.
 						</p>
 					</div>
 				</div>
