Chnage background image and add TCC

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ http://materializecss.com/buttons.html
 </head>
 <body>
 	<header>
+		<div id="image"></div>
 		<ul class="navbar">
 			<li class="active">
 				<a href="index.html">Home</a>
@@ -39,6 +40,9 @@ http://materializecss.com/buttons.html
 			</li>
 			<li>
 				<a href="events.html">Events</a>
+			</li>
+			<li>
+				<a href="mac0499/index.html">TCC</a>
 			</li>
 			<li>
 				<a href="about.html">About me</a>
