--- a/derivative.html
+++ b/derivative.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 	<header>
+		<div id="image"></div>
 		<ul class="navbar">
 			<li>
 				<a href="index.html">Home</a>
@@ -37,6 +38,9 @@
 			</li>
 			<li>
 				<a href="events.html">Events</a>
+			</li>
+			<li>
+				<a href="mac0499/index.html">TCC</a>
 			</li>
 			<li>
 				<a href="about.html">About me</a>
