--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<header>
+		<div id="image"></div>
 		<ul class="navbar">
 			<li>
 				<a href="index.html">Home</a>
@@ -33,6 +34,9 @@
 			</li>
 			<li>
 				<a href="events.html">Events</a>
+			</li>
+			<li>
+				<a href="mac0499/index.html">TCC</a>
 			</li>
 			<li>
 				<a href="about.html">About me</a>
