Add subjective comments and game tabs to TCC

--- a/mac0499/index.html
+++ b/mac0499/index.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8"></meta>
 	<title>MAC0499 - Trabalho de Formatura Supervisionado</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
-	<script type="text/javascript" src="to_executable.js"></script>
 </head>
 <body>
 	<header>
@@ -23,7 +22,10 @@
 				<a href="">Monografia</a>
 			</li>
 			<li>
-				<a href="http://www.linux.ime.usp.br/~joaogabriel/builds" onclick="goToExecutable(); return false;">Executável</a>
+				<a href="subjective.html">Comentários Subjetivos</a>
+			</li>
+			<li>
+				<a href="game.html">Jogo</a>
 			</li>
 			<li class="right">
 				<a href="http://www.linux.ime.usp.br/~joaogabriel">Site principal</a>
@@ -32,11 +34,11 @@
 	</header>
 	<div class="paper">
 		<div class="content">
-			<center>
+			<div class="center">
 				<h2>Criação de um jogo com dificuldade dinâmica e aprendizagem por reforço</h2>
 				<h4>Aluno: João Gabriel Basi</h4>
 				<h4>Supervisor: Prof. Dr. Roberto Hirata Jr.</h4>
-			</center>
+			</div>
 			<h3>Introdução</h3>
 			<p>
 				Jogos no estilo <i>player versus environment</i> (PvE), em contraste com jogos no estilo <i>player versus player</i> (PvP), são jogos onde o jogador combate vários inimigos controlados por inteligências artificiais para cumprir os objetivos do jogo. Nesse estilo, é comum que os desenvolvedores modelem os inimigos como sendo agentes autônomos, pelo fato deles tomarem decisões sem a intervenção humana. 
@@ -61,19 +63,6 @@
 			<p>
 				Além disso, para que o jogo seja o mais simples e portátil possível ele não deve utilizar informações externas ao programa (como por exemplo os quadros da janela do jogo), dados de sensores físicos acoplados ao jogador ou ainda informações armazenadas na nuvem.
 			</p>
-
-			<!-- <p>
-				Este trabalho tem como principal objetivo a criação um agente adversário, para um jogo PvE, que se adapte ao estilo de jogo e à maestria do jogador por meio de aprendizagem por reforço. O desenvolvimento focará na possível integração desse agente em um jogo, para isso, a execução do agente deve impactar o mínimo possível na experiência do jogador, além de não utilizar informações externas ao jogo.
-			</p>
-			<p>
-				Como objetivo secundário, deseja-se criar o algoritmo de modo que, se houver vários agentes com essa mesma arquitetura em uma fase, eles consigam cooperar entre si para derrotar o jogador, ou seja, eles devem considerar as ações uns dos outros quando forem julgar as ações futuras.
-			</p>
-			<p>
-				Para criar e testar as arquiteturas dos agentes pretende-se utilizar o ambiente DeepMind Lab, que conta com uma versão modificada do jogo "Quake III", e com uma interface Python, que permite a personalização dos atributos do jogo e a criação de agentes personalizados.
-			</p>
-			<p>
-				A proposta completa pode ser encontrada <a href="proposta.pdf">aqui</a>
-			</p> -->
 		</div>
 	</div>
 	<footer id="footer">
