Add thesis PDF and change some texts

--- a/mac0499/game.html
+++ b/mac0499/game.html
@@ -19,7 +19,7 @@
 				<a href="">Pôster</a>
 			</li>
 			<li>
-				<a href="">Monografia</a>
+				<a href="monografia.pdf">Monografia</a>
 			</li>
 			<li>
 				<a href="subjective.html">Comentários Subjetivos</a>
