--- a/mac0499/subjective.html
+++ b/mac0499/subjective.html
@@ -19,7 +19,7 @@
 				<a href="">Pôster</a>
 			</li>
 			<li>
-				<a href="">Monografia</a>
+				<a href="monografia.pdf">Monografia</a>
 			</li>
 			<li class="active">
 				<a href="subjective.html">Comentários Subjetivos</a>
@@ -61,15 +61,15 @@
 
 			<h4>Disciplinas que usei no projeto</h4>
 			<ul>
-				<li><b>MAC0425 - Inteligência artificial</b>: A disciplina me apresentou a aprendizagem por reforço e o algoritmo Q-learning, que foram essenciais na realização deste trabalho (Aprendizagem por reforço, Q-learning, Planejamento).</li>
-				<li><b>MAC0460 - Introdução ao aprendizado de máquina</b>: A disciplina me ajudou a entender melhor com funcionam métodos de aprendizagem. Em específico aprendi como funcionam redes neurais e como elas são treinadas, que também é parte essencial deste trabalho (Redes neurais e seus algoritmos, Gradiente descendente, Herísticas para aprendizagem).</li>
-				<li><b>MAE0515 - Introdução à teoria dos jogos</b>: Para descrever a interação entre agentes (jogador vs. IA) foi necessário utilizar alguns conhecimentos sobre teoria da decisão, que aprendi em MAE0515 (Teoria da decisão).</li>
-				<li><b>MAE0119 - Introdução à probabilidade e à estatística & MAE0221 - Probabilidade I</b>: As duas matérias foram importantes para que eu conseguisse entender o funcionamento de todos os algoritmos mais complexos utilizados nesse trabalho (como Q-learning, redes neurais e CAP) e para que fosse possível elaborar algoritmos probabilísticos (como geração de grafos aleatórios) (Distribuições de probabilidade, Variáveis aleatórias, Probabilidade condicional, Esperança e desvio padrão).</li>
-				<li><b>MAC0110 - Introdução à computação & MAC121 - Algoritmos e estrutura de dados I &MAC0323 - Algoritmos e estrutura de dados</b>: As três matérias foram fundamentais para a elaboração de todo o projeto. MAC0110 me ensinou a programar, MAC0121 me introduziu à estrutura de dados e MAC0323 me mostrou como lidar com herança de objetos e como organizar o código de forma que ele seja mais modular (Programação, Orientação à objetos, Organização de software).</li>
-				<li><b>MAE0228 - Noções de probabilidade e processos estocásticos</b>: O comportamento de um agente autônomo é descrito como um processo de decisão de Markov. MAE0228 me introduziu à esse conceito e me ajudou a entender melhor seu funcionamento (Processos de decisão de Markov).</li>
-				<li><b>MAT0112 - Vetores e geometria & MAT0122 - Álgebra linear I</b>: Redes neurais e o algoritmo de retropropagação do erro são baseados em multiplicações de matriz e produto interno, a navegação no espaço de funções pela rede requer conhecimento de espaços vetoriais (Espaços vetoriais, Produto interno, Operações com matrizes).</li>
-				<li><b>MAT2453 - Cálculo diferencial e integral I & MAT2454 - Cálculo diferencial e integral II & MAT0236 - Funções diferenciáveis e séries</b>: As três matérias foram fundamentais para que eu entedesse os algoritmos de redes neurais (Funções diferenciáveis (R<sup>n</sup> → R<sup>m</sup>), Regra da cadeia, Convergência de séries).</li>
-				<li><b>FLC0474 - Língua portuguesa</b>: A matéria ajudou a relembrar o conteúdo do ensino médio e ajudou na elaboração da monografia e da apresentação (Produção de textos acadêmicos).</li>
+				<li><b>MAC0425 - Inteligência artificial</b>: A disciplina me apresentou a aprendizagem por reforço e o algoritmo Q-learning, que foram essenciais na realização deste trabalho.</li>
+				<li><b>MAC0460 - Introdução ao aprendizado de máquina</b>: A disciplina me ajudou a entender melhor com funcionam métodos de aprendizagem. Em específico aprendi como funcionam redes neurais e como elas são treinadas, que também é parte essencial deste trabalho.</li>
+				<li><b>MAE0515 - Introdução à teoria dos jogos</b>: Para descrever a interação entre agentes (jogador vs. IA) foi necessário utilizar alguns conhecimentos sobre teoria da decisão, que aprendi em MAE0515.</li>
+				<li><b>MAE0119 - Introdução à probabilidade e à estatística & MAE0221 - Probabilidade I</b>: As duas matérias foram importantes para que eu conseguisse entender o funcionamento de todos os algoritmos mais complexos utilizados nesse trabalho (como Q-learning, redes neurais e CAP) e para que fosse possível elaborar algoritmos probabilísticos (como geração de grafos aleatórios).</li>
+				<li><b>MAC0110 - Introdução à computação & MAC121 - Algoritmos e estrutura de dados I & MAC0323 - Algoritmos e estrutura de dados II</b>: As três matérias foram fundamentais para a elaboração de todo o projeto. MAC0110 me ensinou a programar, MAC0121 me introduziu à estrutura de dados e MAC0323 me mostrou como lidar com herança de objetos e como organizar o código de forma que ele seja mais modular.</li>
+				<li><b>MAE0228 - Noções de probabilidade e processos estocásticos</b>: O comportamento de um agente autônomo é descrito como um processo de decisão de Markov. MAE0228 me introduziu à esse conceito e me ajudou a entender melhor seu funcionamento.</li>
+				<li><b>MAT0112 - Vetores e geometria & MAT0122 - Álgebra linear I</b>: Redes neurais e o algoritmo de retropropagação do erro são baseados em multiplicações de matriz e produto interno, a navegação no espaço de funções pela rede requer conhecimento de espaços vetoriais.</li>
+				<li><b>MAT2453 - Cálculo diferencial e integral I & MAT2454 - Cálculo diferencial e integral II & MAT0236 - Funções diferenciáveis e séries</b>: As três matérias foram fundamentais para que eu entedesse os algoritmos de redes neurais.</li>
+				<li><b>FLC0474 - Língua portuguesa</b>: A matéria ajudou a relembrar o conteúdo do ensino médio e ajudou na elaboração da monografia e da apresentação.</li>
 			</ul>
 
 			<h4>Matérias que podem ser úteis se o projeto continuar no futuro</h4>
